# test_task_medol

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  ruff.toml
app/: config.py  main.py
app/api/: auth.py
app/auth/: utils.py
app/infra/postgres/: db.py
app/infra/postgres/alembic/: env.py
app/infra/postgres/alembic/versions/: 0161293b0966_add_user_model.py  20aae078eabd_add_user_model.py
app/infra/postgres/models/: __init__.py  user.py
app/infra/postgres/storage/: user.py
app/schemas/: auth.py  user.py
app/services/: user.py
